tests/circuits/invalids/miss_links_section.nts
.chipsets:
input   a
input   b
4071    or
output  s
a:1     or:1
b:1     or:2
or:3    s:1